syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

message DispatchOnlineCallbackReq {
  RequestHeader header = 1;
}

message DispatchOnlineCallbackResp {
  ResponseHeader header = 1;
}

service dispatchService {
  //DispatchOnlineCallback 上线回调
  rpc DispatchOnlineCallback(DispatchOnlineCallbackReq) returns (DispatchOnlineCallbackResp) {}
}
